--- a/RerMobile/RerMobile.Android/RerMobile.Android.csproj
+++ b/RerMobile/RerMobile.Android/RerMobile.Android.csproj
@@ -83,15 +83,14 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Resources\drawable\" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RerMobile\RerMobile.csproj">
       <Project>{6AC4CCF2-8DC9-473E-B4EA-7B2EB04EC1C3}</Project>
       <Name>RerMobile</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\drawable\logo-burger-king.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
